<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white">
    //标题栏
    <RelativeLayout
        android:id="@+id/order_firm_relative"
        android:layout_width="match_parent"
        android:layout_height="490px"
        android:background="@drawable/background_gradient">
        <ImageView
            android:id="@+id/order_firm_back"
            android:layout_width="21px"
            android:layout_height="36px"
            android:layout_marginTop="68px"
            android:layout_marginLeft="32px"
            android:background="@mipmap/icon_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64px"
            android:layout_marginLeft="300px"
            android:text="@string/firm_order"
            android:textColor="#ffffff"
            android:textSize="36px" />
        //客户信息
        <RelativeLayout
            android:layout_width="660px"
            android:layout_height="200px"
            android:background="@drawable/shape_corner"
            android:layout_marginTop="135px"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45px"
                android:layout_marginLeft="40px"
                android:textSize="30px"
                android:textColor="#333333"
                android:text="吴小"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45px"
                android:layout_marginLeft="360px"
                android:textSize="30px"
                android:textColor="#333333"
                android:text="@string/customer_tel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110px"
                android:layout_marginLeft="40px"
                android:textSize="28px"
                android:textColor="#333333"
                android:text="@string/customer_address"/>
        </RelativeLayout>
        //归属药房
        <RelativeLayout
            android:layout_width="660px"
            android:layout_height="120px"
            android:background="@drawable/shape_corner_up"
            android:layout_marginTop="370px"
            android:layout_centerHorizontal="true">
            <ImageView
                android:layout_width="77px"
                android:layout_height="77px"
                android:layout_marginLeft="38px"
                android:layout_marginTop="20px"
                android:background="@mipmap/order_honer_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160px"
                android:layout_marginTop="40px"
                android:textColor="#333333"
                android:textSize="28px"
                android:text="@string/honer_name"/>
            <View
                android:id="@+id/devide"
                android:layout_width="580px"
                android:layout_height="2px"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="@color/border_background"
                />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_firm_relative"
        >
        <RelativeLayout
            android:layout_width="660px"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <ImageView
                android:layout_width="140px"
                android:layout_height="140px"
                android:layout_marginTop="20px"
                android:layout_marginLeft="38px"
                android:background="@mipmap/order_goods_picture"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:layout_marginLeft="220px"
                android:textColor="#333333"
                android:textSize="32px"
                android:text="@string/drug_goods_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="220px"
                android:layout_marginTop="60px"
                android:text="@string/drug_goods_function"
                android:textColor="#999999"
                android:textSize="24px"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="220px"
                android:layout_marginTop="120px"
                android:textSize="32px"
                android:textColor="#3bb79e"
                android:text="@string/drug_price"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38px"
                android:layout_marginTop="220px"
                android:text="@string/shipping_methods"
                android:textSize="28px"
                android:textColor="#333333"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="45px"
                android:textSize="28px"
                android:text="@string/express"
                android:textColor="#333333"
                />
            <View
                android:layout_width="580px"
                android:layout_height="2px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="300px"
                android:background="@color/border_background"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38px"
                android:layout_marginTop="350px"
                android:text="@string/seller_message"
                android:textSize="28px"
                android:textColor="#333333"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="280px"
                android:layout_marginTop="460px"
                android:text="@string/order_goods_number"
                android:textSize="28px"
                android:textColor="#333333"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="440px"
                android:layout_marginTop="460px"
                android:text="@string/order_total"
                android:textSize="28px"
                android:textColor="#333333"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="530px"
                android:layout_marginTop="460px"
                android:text="@string/drug_price"
                android:textSize="28px"
                android:textColor="#3bb69e"/>
            <View
                android:layout_width="580px"
                android:layout_height="2px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="530px"
                android:background="@color/border_background"
                />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom ="true"
        >
        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="合计金额：￥16.3"
            android:textColor="#3bb69e"
            android:layout_marginLeft="20dp"
            android:textSize="15dp"
            android:layout_alignBaseline="@+id/submit_order"
            android:layout_alignBottom="@+id/submit_order"
            android:layout_toLeftOf="@+id/submit_order"
            android:layout_toStartOf="@+id/submit_order" />
        <Button
            android:id="@+id/submit_order"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="提交订单"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:background="#3bb69e"
           />
    </RelativeLayout>
</RelativeLayout>