<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9f1f3">

    //标题栏
    <RelativeLayout
        android:id="@+id/drug_check_relative"
        android:layout_width="match_parent"
        android:layout_height="128px"
        android:background="@drawable/background_gradient">
        <ImageView
            android:id="@+id/alarm_back"
            android:layout_width="21px"
            android:layout_height="36px"
            android:layout_marginTop="48px"
            android:layout_marginLeft="32px"
            android:background="@mipmap/icon_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44px"
            android:layout_marginLeft="300px"
            android:text="@string/alarm_assistant"
            android:textColor="#ffffff"
            android:textSize="36px" />
    </RelativeLayout>
    //展示栏
    <RelativeLayout
        android:layout_marginTop="40px"
        android:layout_width="match_parent"
        android:layout_height="188px"
        android:background="@drawable/shape_corner"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <ImageView
            android:layout_marginLeft="70px"
            android:layout_width="81px"
            android:layout_height="88px"
            android:background="@mipmap/tool_icon_remind"
            />
        <LinearLayout
            android:layout_marginLeft="201px"
            android:layout_width="match_parent"
            android:layout_height="88px"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="44px"
                android:textSize="30px"
                android:textColor="#333333"
                android:text="@string/alarm_tag1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="44px"
                android:textSize="30px"
                android:textColor="#333333"
                android:text="@string/alarm_tag2"/>
        </LinearLayout>
    </RelativeLayout>
    //闹钟列表
    <LinearLayout
        android:layout_marginTop="20px"
        android:layout_width="match_parent"
        android:layout_height="570px">
        <ListView
                android:id="@+id/alarm_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        </ListView>
    </LinearLayout>
    //添加、删除
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        //添加闹钟
        <RelativeLayout
            android:layout_width="80px"
            android:layout_height="120px"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="226px">

            <ImageView
                android:id="@+id/add_alarm"
                android:layout_width="80px"
                android:layout_height="80px"
                android:background="@mipmap/tool_clock_icon_add"/>
            <TextView
                android:layout_width="80px"
                android:layout_height="match_parent"
                android:text="@string/alarm_add"
                android:layout_marginTop="85px"
                android:textColor="#24ac7f"
                android:gravity="center"
                android:textSize="30px"/>
        </RelativeLayout>

        //删除闹钟
        <RelativeLayout
            android:layout_width="80px"
            android:layout_height="120px"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="88px">

            <ImageView
                android:id="@+id/delete_alarm"
                android:layout_width="80px"
                android:layout_height="80px"
                android:background="@mipmap/tool_clock_icon_delete"/>
            <TextView
                android:layout_width="80px"
                android:layout_height="match_parent"
                android:text="@string/alarm_delete"
                android:layout_marginTop="85px"
                android:textColor="#24ac7f"
                android:gravity="center"
                android:textSize="30px"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>