<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9f1f3">

    //标题栏
    <RelativeLayout
        android:id="@+id/drug_check_relative"
        android:layout_width="match_parent"
        android:layout_height="128px"
        android:background="@drawable/background_gradient">
        <ImageView
            android:id="@+id/add_alarm_back"
            android:layout_width="21px"
            android:layout_height="36px"
            android:layout_marginTop="48px"
            android:layout_marginLeft="32px"
            android:background="@mipmap/icon_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44px"
            android:layout_centerHorizontal="true"
            android:text="@string/alarm_add_title"
            android:textColor="#ffffff"
            android:textSize="36px" />
        <TextView
            android:id="@+id/firm_add_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="44px"
            android:layout_marginRight="30px"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="28px"
            />
    </RelativeLayout>
    //输入栏

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300px"
        >

        <EditText
            android:id="@+id/add_alarm_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e9f1f3"
            android:textColorHint="#999999"
            android:gravity="left"
            android:textColor="#333333"
            android:textSize="30px"
            android:hint="输入闹钟提示内容..."/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80px"
            android:layout_marginTop="40px"
            android:text="@string/remind_date_time"
            android:textColor="#333333"
            android:textSize="36px" />

        <RelativeLayout
            android:layout_width="600px"
            android:layout_height="300px"
            android:layout_marginLeft="80px"
            android:layout_marginTop="150px">
            //1

            <ImageView
                android:layout_width="24px"
                android:layout_height="24px"
                android:layout_marginTop="10px"
                android:background="@mipmap/tool_clock_icon_time" />

            <TextView
                android:id="@+id/select_date_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60px"
                android:text="@string/now_date"
                android:textColor="#939599"
                android:textSize="36px" />

            <TextView
                android:id="@+id/select_time_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="280px"
                android:text="@string/now_time"
                android:textColor="#939599"
                android:textSize="36px" />
            //2

            <ImageView
                android:layout_width="24px"
                android:layout_height="24px"
                android:layout_marginTop="112px"
                android:background="@mipmap/tool_clock_icon_time" />

            <TextView
                android:id="@+id/select_date_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60px"
                android:layout_marginTop="104px"
                android:text="@string/now_date"
                android:textColor="#939599"
                android:textSize="36px" />

            <TextView
                android:id="@+id/select_time_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="280px"
                android:layout_marginTop="104px"
                android:text="@string/now_time"
                android:textColor="#939599"
                android:textSize="36px" />
            //3

            <ImageView
                android:layout_width="24px"
                android:layout_height="24px"
                android:layout_marginTop="218px"
                android:background="@mipmap/tool_clock_icon_time" />

            <TextView
                android:id="@+id/select_date_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60px"
                android:layout_marginTop="208px"
                android:text="@string/now_date"
                android:textColor="#939599"
                android:textSize="36px" />

            <TextView
                android:id="@+id/select_time_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="280px"
                android:layout_marginTop="208px"
                android:text="@string/now_time"
                android:textColor="#939599"
                android:textSize="36px" />

        </RelativeLayout>



    </RelativeLayout>


</LinearLayout>